{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 229,
  "lineage": "bfbef363-e1d7-34da-de0b-ccf953da39c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "docker-drt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297140796352:route-table/rtb-0728cda7596475bf3",
            "default_route_table_id": "rtb-0728cda7596475bf3",
            "id": "rtb-0728cda7596475bf3",
            "owner_id": "297140796352",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099876187032d38af",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Docker-drt"
            },
            "tags_all": {
              "Name": "Docker-drt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e5511ac43a7ec12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Docker-gw",
            "aws_vpc.Docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddc798b3f1a5117e",
            "arn": "arn:aws:ec2:us-east-1:297140796352:instance/i-0b506b7c821ad30cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b506b7c821ad30cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Docker-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060bd98054125a90f",
            "private_dns": "ip-10-0-3-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.207",
            "public_ip": "3.238.12.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d55146aa892364b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0873152579e40674d",
            "tags": {
              "Name": "Docker_instance"
            },
            "tags_all": {
              "Name": "Docker_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094e6a5ac287af047"
            ]
          },
          "dependencies": [
            "aws_key_pair.Docker-keypair",
            "aws_security_group.Docker-project-sg",
            "aws_subnet.Docker-subnet2",
            "aws_vpc.Docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Docker-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297140796352:internet-gateway/igw-099876187032d38af",
            "id": "igw-099876187032d38af",
            "owner_id": "297140796352",
            "tags": {
              "Name": "Docker.gw"
            },
            "tags_all": {
              "Name": "Docker.gw"
            },
            "vpc_id": "vpc-03e5511ac43a7ec12"
          },
          "dependencies": [
            "aws_vpc.Docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Docker-project-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297140796352:security-group/sg-094e6a5ac287af047",
            "description": "sg for Docker-project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094e6a5ac287af047",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "Docker-project-sg",
            "name_prefix": "",
            "owner_id": "297140796352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Docker-project-sg"
            },
            "tags_all": {
              "Name": "Docker-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e5511ac43a7ec12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Docker-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297140796352:subnet/subnet-044edea8ab704b57c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044edea8ab704b57c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297140796352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project-subnet1"
            },
            "tags_all": {
              "Name": "Project-subnet1"
            },
            "vpc_id": "vpc-03e5511ac43a7ec12"
          },
          "dependencies": [
            "aws_vpc.Docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Docker-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297140796352:subnet/subnet-0873152579e40674d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0873152579e40674d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297140796352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project-subnet2"
            },
            "tags_all": {
              "Name": "Project-subnet2"
            },
            "vpc_id": "vpc-03e5511ac43a7ec12"
          },
          "dependencies": [
            "aws_vpc.Docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Docker-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297140796352:vpc/vpc-03e5511ac43a7ec12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e684da1852418bba",
            "default_route_table_id": "rtb-0728cda7596475bf3",
            "default_security_group_id": "sg-0e02540e1ebadc927",
            "dhcp_options_id": "dopt-0ee7822ec02e5c0f6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e5511ac43a7ec12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0728cda7596475bf3",
            "owner_id": "297140796352",
            "tags": {
              "Name": "Project-vpc"
            },
            "tags_all": {
              "Name": "Project-vpc"
            }
          }
        }
      ]
    }
  ]
}